--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@
             Hello! I’m Lauren Stroud, an aspiring front end web developer from Bournemouth, UK.
             <br>
             <br>
-            I’m a front-end enthusiast with a passion for learning. If I'm not at my desk improving my skills, I'm out and about enjoying the great outdoors that the south coast of England has to offer. From cycling to kayaking, camping and live
+            I’m a computing ethusiast with a passion for learning and growing. If I'm not at my desk improving my skills, I'm out and about enjoying the great outdoors that the south coast of England has to offer. From cycling to kayaking, camping and live
             music I'm always raring to get out and enjoy what beautiful Bournemouth has to offer.
 
-            <br>
-            <br>
-            I’m a hard worker with excellent time keeping skills and a desire to push myself. I am always learning, always pushing to improve on what I don’t understand with a good memory for facts and a desire to learn.
+
 
           </p>
         </div>
